[package]

name = "raytrace"
version = "0.0.0"
authors = []

[profile.dev]
opt-level = 1           # Controls the --opt-level the compiler builds with
debug = true            # Controls whether the compiler passes -g or `--cfg ndebug`
rpath = false           # Controls whether the compiler passes `-C rpath`
lto = false             # Controls `-C lto` for binaries and staticlibs
debug-assertions = true # Controls whether debug assertions are enabled

[[bin]]

name = "raytrace"
path = "./src/mod.rs"

[dependencies]
cgmath = "*"
glium = "*"
glutin = "*"
log = "*"
rand = "*"
time = "*"
